# sensorpush-logger

./: .gitignore  README.md  pyproject.toml
backend/: graphql_resolvers.py  graphql_schema.py  main.py  sp_ble.py  sql_model.py  web_backend.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  apollo.ts  index.tsx
frontend/src/components/: EditableFriendlyNameCell.tsx  Navigation.tsx
frontend/src/components/ui/: input.tsx
frontend/src/graphql/: getSamples.graphql  getSensors.graphql  getSingleSensorSamples.graphql  logMessages.graphql  sensorUpdates.graphql  singleSensorUpdates.graphql  updateSensorName.graphql
frontend/src/pages/: Config.tsx  Dashboard.tsx  Export.tsx  Log.tsx  SensorChart.tsx  Sensors.tsx
